# otus-cpp

./: CMakeLists.txt  ip_filter.cpp  ip_filter_lib.cpp  ip_filter_lib.h  lib.cpp  main.cpp  patch_lib.cpp  test_ip_filter.cpp  test_version_google.cpp
.github/workflows/: release.yml
